examples/bad/reflect_nested_slice_field.mko
// EXPECT: reflect_value_of expects a POD struct
// Nested struct with []int field is non-POD for reflect_value_of.
struct Inner {
    xs: []int
}

struct Outer {
    i: Inner
    n: int
}

fn main() {
    let inn = Inner { xs: [1] }
    let o = Outer { i: inn, n: 1 }
    let _ = reflect_value_of(o)
}
